# solar

./: Cargo.toml  build.rs
data/: co.tauos.Solar.desktop  co.tauos.Solar.gresources.xml  co.tauos.Solar.gschema.xml  co.tauos.Solar.metainfo.xml
data/ui/: window.ui
src/: application.rs  config.rs  main.rs  window.rs
